# -Real-Time-Edge-Detection-Viewer

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/edgeviewer/: Camera2Helper.kt  MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/edgeviewer/gl/: EdgeRenderer.kt
app/src/main/res/layout/: activity_main.xml
web/: index.html  package-lock.json  package.json
web/src/: index.js  index.ts
